--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -4,6 +4,13 @@
   "version": "0.2.0",
   "configurations": [
       {
+          "name": "Launch test package",
+          "type": "go",
+          "request": "launch",
+          "mode": "test",
+          "program": "${workspaceFolder}"
+      },
+      {
             "name": "Python: Current File (Integrated Terminal)",
             "type": "python",
             "request": "launch",
