--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -4,6 +4,20 @@
   "version": "0.2.0",
   "configurations": [
       {
+          "name": "Attach to Process",
+          "type": "go",
+          "request": "attach",
+          "mode": "local",
+          "processId": 0
+      },
+      {
+          "name": "Launch Package",
+          "type": "go",
+          "request": "launch",
+          "mode": "debug",
+          "program": "${workspaceFolder}"
+      },
+      {
           "name": "Launch test package",
           "type": "go",
           "request": "launch",
