--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -15,14 +15,14 @@
           "type": "go",
           "request": "launch",
           "mode": "debug",
-          "program": "${workspaceFolder}"
+          "program": "${MilestoneProject1}"
       },
       {
           "name": "Launch test package",
           "type": "go",
           "request": "launch",
           "mode": "test",
-          "program": "${workspaceFolder}"
+          "program": "${MilestoneProject1}"
       },
       {
             "name": "Python: Current File (Integrated Terminal)",
