--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -28,7 +28,7 @@
             "name": "Python: Current File (Integrated Terminal)",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "${MilestoneProject1)",
             "console": "internalConsole"
         }
   ]
